crates/dag-macros/tests/ui/workflow_switch_default_not_ident.stderr
error: switch! requires `default = <node_alias>`
  --> tests/ui/workflow_switch_default_not_ident.rs:40:19
   |
40 |         default = "a"
   |                   ^^^
